# gepetuto

./: .mergify.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-app.yml  release.yml  tests.yml
docs/: release.md  release.sh
gepetuto/: __init__.py  __main__.py  generate.py  lint.py  magic.py  main.py  test.py
tests/: 1_example_notebook.ipynb  appendix_1-notebook.ipynb  test_args.py  unit_tests.py
tests/tp1/: cholesky.py  example_script.py
tp1/: example_snippet.py
