[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "mypy>=1.16.1"
]

[project]
authors = [
  {email = "guilhem.saurel@laas.fr", name = "Guilhem Saurel"},
  {email = "nmansard@laas.fr", name = "Nicolas Mansard"},
  {email = "tmartinez@laas.fr", name = "Théo Martinez"}
]
dependencies = [
  "jupyterlab>=4.4.4",
  "ruff>=0.12.1"
]
description = "Tutorial edition framework"
license = "BSD-2-Clause"
name = "gepetuto"
readme = "README.md"
requires-python = ">=3.10"
version = "2.0.0"

[project.scripts]
gepetuto = "gepetuto.__main__:main"

[project.urls]
changelog = "https://github.com/gepetto/gepetuto/blob/main/CHANGELOG.md"
homepage = "https://github.com/gepetto/gepetuto"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-ignore = ["D203", "D213"]
extend-select = ["A", "B", "C", "COM", "D", "EM", "EXE", "G", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]

[tool.tomlsort]
all = true
